# raylib-test

./: CMakeLists.txt  README.md
src/: gameObject.cpp  gameObject.h  main.cpp
src/actors/: actor.cpp  actor.h  dummy.cpp  dummy.h  player.cpp  player.h
src/components/: collisionBox.h  health.cpp  health.h  timer.cpp  timer.h
